Fixed header link-section alignment and another attempt at the overflowing carousel item

--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -27,6 +27,7 @@
     flex: 1;
     align-items: center;
     justify-content: end;
+    justify-content: flex-end;
 }
 
 .link {
